--- a/infoSoft.Crystal.Business/tv.Crystal.Business.csproj
+++ b/infoSoft.Crystal.Business/tv.Crystal.Business.csproj
@@ -48,6 +48,7 @@
     <Compile Include="PrivilegeBLL.cs" />
     <Compile Include="ProductBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SalesBLL.cs" />
     <Compile Include="UserBLL.cs" />
   </ItemGroup>
   <ItemGroup>
