--- a/infoSoft.Crystal.Common/tv.Crystal.Common.csproj
+++ b/infoSoft.Crystal.Common/tv.Crystal.Common.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Models\Properties\VoucherEntry.cs" />
     <Compile Include="Models\ReceiptMaster.cs" />
     <Compile Include="Models\SalesVoucher.cs" />
+    <Compile Include="Models\SalesVoucherSettlement.cs" />
     <Compile Include="Models\TagObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlHelper\SqlHelper.cs" />
